--- a/Frontend/src/pages/admin/kategori.astro
+++ b/Frontend/src/pages/admin/kategori.astro
@@ -85,7 +85,7 @@ import '../../css/admin.css';
   </div>
 
   <script>
-    import { apiService } from '../../lib/apiService';
+    import { apiService } from '../../lib/apiService.js';
     let currentCategoryId: string | null = null;
     let categories: any[] = [];
 
