--- a/Frontend/src/pages/admin/product.astro
+++ b/Frontend/src/pages/admin/product.astro
@@ -104,7 +104,7 @@ import '../../css/admin.css';
   </div>
 
   <script>
-    import { apiService } from '../../lib/apiService';
+    import { apiService } from '../../lib/apiService.js';
 
     let currentProductId: string | null = null;
     let products: any[] = [];
