--- a/Frontend/src/pages/admin/user.astro
+++ b/Frontend/src/pages/admin/user.astro
@@ -123,7 +123,7 @@ import '../../css/admin.css';
   </div>
 
   <script>
-    import { apiService } from '../../lib/apiService';
+    import { apiService } from '../../lib/apiService.js';
 
     let currentCustomerId: string | null = null;
     let customers: any[] = [];
