--- a/Frontend/src/pages/profile.astro
+++ b/Frontend/src/pages/profile.astro
@@ -138,7 +138,7 @@ import '../css/profile.css';
 </Layout>
 
 <script>
-  import { apiService } from '../lib/apiService';
+  import { apiService } from '../lib/apiService.js';
 
   async function initProfile() {
     console.log("Memulai inisialisasi profil...");
