--- a/Frontend/src/pages/admin/transaksi.astro
+++ b/Frontend/src/pages/admin/transaksi.astro
@@ -105,7 +105,7 @@ import '../../css/admin.css';
   </div>
 
   <script>
-    import { apiService } from '../../lib/apiService';
+    import { apiService } from '../../lib/apiService.js';
 
     let currentTrId: string | number | null = null;
     let transactions: any[] = [];
