UI: Update navigation, product labels, and fix missing data in admin tables

--- a/Frontend/src/components/Header.astro
+++ b/Frontend/src/components/Header.astro
@@ -21,7 +21,7 @@ const { isAdmin = false } = Astro.props;
       ) : (
         <div class="nav-links-wrapper">
           <div class="nav-links">
-            <a href="/#product" class="nav-link menu-font">Tuko di Rumah</a>
+            <a href="/#" class="nav-link menu-font">Tuko di Rumah</a>
             <a href="/#product" class="nav-link menu-font">Produk</a>
             <a href="/#menu" class="nav-link menu-font">Menu</a>
             <a href="/#outlet" class="nav-link menu-font">Outlet</a>
