--- a/Frontend/src/components/Product.astro
+++ b/Frontend/src/components/Product.astro
@@ -11,7 +11,7 @@ import ProductModal from './ProductModal.astro';
         <div class="showcase-item" data-id="1">
           <img src="/kopi susu 1l.png" alt="Kopi Susu 1L" />
           <div class="showcase-label">
-            <h3>Tuko di Rumah</h3>
+            <h3>Kopi</h3>
             <p>Kopi Susu Tetangga 1Liter</p>
             <span class="price">Rp. 120.000</span>
             <p class="description btn-quick-buy" style="cursor: pointer;">Beli Sekarang</p>
@@ -21,7 +21,7 @@ import ProductModal from './ProductModal.astro';
         <div class="showcase-item" data-id="3">
           <img src="/kopi hitam 1l.png" alt="Kopi Hitam 1L" />
           <div class="showcase-label">
-            <h3>Tuko di Rumah</h3>
+            <h3>Kopi</h3>
             <p>Kopi Hitam Tetangga 1Liter</p>
             <span class="price">Rp. 120.000</span>
             <p class="description btn-quick-buy" style="cursor: pointer;">Beli Sekarang</p>
@@ -31,7 +31,7 @@ import ProductModal from './ProductModal.astro';
         <div class="showcase-item" data-id="2">
           <img src="/kopi susu 500ml.png" alt="Kopi Susu 500ml" />
           <div class="showcase-label">
-            <h3>Tuko di Rumah</h3>
+            <h3>Kopi</h3>
             <p>Kopi Susu Tetangga 500ml</p>
             <span class="price">Rp. 60.000</span>
             <p class="description btn-quick-buy" style="cursor: pointer;">Beli Sekarang</p>
