--- a/Frontend/src/components/ProductModal.astro
+++ b/Frontend/src/components/ProductModal.astro
@@ -31,24 +31,24 @@ import '../css/product-modal.css';
   const productData = {
     '/kopi susu 1l.png': {
       id: 1,
-      title: 'Tuko di Rumah',
+      title: 'Kopi',
       name: 'Kopi Susu Tetangga 1Liter',
       price: 'Rp. 120.000',
-      description: '<p>Tuko di Rumah adalah produk minuman Toko Kopi Tuko dalam botol 1 Liter yang dapat dinikmati bersama keluarga atau teman dekat. Dibuat dengan biji kopi full arabica. Tetangga Blend.</p><p>Melihat #tetanggatuko yang punya kebiasaan nyetok kopi untuk akhir pekan, kali ini Toko Kopi Tuko menyediakan produk dalam ukuran besar, Tuko di Rumah</p><p>Jangan lupa untuk menyertakan catatan penjual NORMAL / NO SUGAR untuk pilihan Tuko di Rumah kopi Susu Tetangga ya #TetanggaTuko.</p>'
+      description: '<p>Kopi Susu Tetangga dalam botol 1 Liter yang dapat dinikmati bersama keluarga atau teman dekat. Dibuat dengan biji kopi full arabica. Tetangga Blend.</p><p>Nikmati kemudahan nyetok kopi untuk akhir pekan dengan ukuran besar.</p><p>Jangan lupa untuk menyertakan catatan penjual NORMAL / NO SUGAR untuk pilihan Kopi Susu Tetangga ya #TetanggaTuko.</p>'
     },
     '/kopi hitam 1l.png': {
       id: 3,
-      title: 'Tuko di Rumah',
+      title: 'Kopi',
       name: 'Kopi Hitam Tetangga 1Liter',
       price: 'Rp. 120.000',
-      description: '<p>Tuko di Rumah adalah produk minuman Toko Kopi Tuko dalam botol 1 Liter yang dapat dinikmati bersama keluarga atau teman dekat. Dibuat dengan biji kopi full arabica. Tetangga Blend.</p><p>Melihat #tetanggatuko yang punya kebiasaan nyetok kopi untuk akhir pekan, kali ini Toko Kopi Tuko menyediakan produk dalam ukuran besar, Tuko di Rumah</p><p>Jangan lupa untuk menyertakan catatan penjual NORMAL / NO SUGAR untuk pilihan Tuko di Rumah kopi Hitam Tetangga ya #TetanggaTuko.</p>'
+      description: '<p>Kopi Hitam Tetangga dalam botol 1 Liter yang dapat dinikmati bersama keluarga atau teman dekat. Dibuat dengan biji kopi full arabica. Tetangga Blend.</p><p>Nikmati kemudahan nyetok kopi untuk akhir pekan dengan ukuran besar.</p><p>Jangan lupa untuk menyertakan catatan penjual NORMAL / NO SUGAR untuk pilihan Kopi Hitam Tetangga ya #TetanggaTuko.</p>'
     },
     '/kopi susu 500ml.png': {
       id: 2,
-      title: 'Tuko di Rumah',
+      title: 'Kopi',
       name: 'Kopi Susu Tetangga 500ml',
       price: 'Rp. 60.000',
-      description: '<p>Tuko di Rumah adalah produk minuman Toko Kopi Tuko dalam botol 500ml yang dapat dinikmati bersama keluarga atau teman dekat. Dibuat dengan biji kopi full arabica. Tetangga Blend.</p><p>Melihat #tetanggatuko yang punya kebiasaan nyetok kopi untuk akhir pekan, kali ini Toko Kopi Tuko menyediakan produk dalam ukuran praktis, Tuko di Rumah</p><p>Jangan lupa untuk menyertakan catatan penjual NORMAL / NO SUGAR untuk pilihan Tuko di Rumah kopi Susu Tetangga ya #TetanggaTuko.</p>'
+      description: '<p>Kopi Susu Tetangga dalam botol 500ml yang dapat dinikmati bersama keluarga atau teman dekat. Dibuat dengan biji kopi full arabica. Tetangga Blend.</p><p>Nikmati kemudahan nyetok kopi dalam ukuran praktis.</p><p>Jangan lupa untuk menyertakan catatan penjual NORMAL / NO SUGAR untuk pilihan Kopi Susu Tetangga ya #TetanggaTuko.</p>'
     }
   };
 
